[package]
name = "cr_program_settings"
version = "0.1.0"
edition = "2021"

[lib]
name = "cr_program_settings"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.166", features = ["derive"]}
toml = "0.7.6"
home = "0.5.5"