[package]
name = "cr_program_settings"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "A small simple library that allows for saving of a struct containing data for a program to persist"
license = "GPL-3.0-only"
repository = "https://github.com/CoryRobertson/cr_program_settings"
homepage = "https://github.com/CoryRobertson/cr_program_settings"

[lib]
name = "cr_program_settings"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"]}
toml = "0.7.6"
home = "0.5.5"